[gd_scene load_steps=10 format=3 uid="uid://rysgdcqdsxkf"]

[ext_resource type="Script" path="res://BattleScene.gd" id="1_0vlf7"]
[ext_resource type="PackedScene" uid="uid://c3i8jspdnq5el" path="res://Components/UI/ui_component.tscn" id="2_5osb8"]
[ext_resource type="Script" path="res://Services/NavService.gd" id="2_gwmk8"]
[ext_resource type="PackedScene" uid="uid://b2d6v2gar3raa" path="res://Map/grid_map.tscn" id="2_utyr3"]
[ext_resource type="Script" path="res://Services/CombatService.gd" id="3_6djkd"]
[ext_resource type="PackedScene" uid="uid://bkmpi4m63h40d" path="res://Entities/Units/Unit.tscn" id="3_nq6xp"]
[ext_resource type="PackedScene" uid="uid://bw27smvokg0rp" path="res://Camera/camera_move.tscn" id="6_w0s2y"]
[ext_resource type="Script" path="res://Entities/Units/UnitHolder.gd" id="7_3qxjp"]
[ext_resource type="Resource" uid="uid://c5udfhs246jvk" path="res://Entities/test_clocktime.tres" id="10_n4lvi"]

[node name="BattleScene3D" type="Node3D"]
script = ExtResource("1_0vlf7")

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="UIComponent" parent="UICanvas" instance=ExtResource("2_5osb8")]

[node name="NavService" type="Node" parent="."]
script = ExtResource("2_gwmk8")

[node name="CombatService" type="Node" parent="."]
script = ExtResource("3_6djkd")

[node name="Environment" type="Node" parent="."]

[node name="Obstructors" type="Node3D" parent="Environment"]

[node name="BattleMap" parent="Environment" instance=ExtResource("2_utyr3")]

[node name="CameraMove" parent="." instance=ExtResource("6_w0s2y")]

[node name="UnitHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.35271)
script = ExtResource("7_3qxjp")

[node name="Unit2" parent="UnitHolder" instance=ExtResource("3_nq6xp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.48231, 1.34852, -0.163158)

[node name="Unit" parent="UnitHolder" instance=ExtResource("3_nq6xp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.68, 2.51217)
attr_comp = ExtResource("10_n4lvi")
